--- a/resources/assets/css/styles.css
+++ b/resources/assets/css/styles.css
@@ -1805,3 +1805,7 @@ ul.staff-list li .personal-info .name a:hover{
 .slided-box-content .show-less-btn a:hover{
     text-decoration: underline;
 }
+
+.slided-box-content h3{
+    margin-right: 50px;
+}
