--- a/resources/assets/css/styles.css
+++ b/resources/assets/css/styles.css
@@ -1386,7 +1386,7 @@ ul.staff-list li .personal-info .name a:hover{
     background: #e6f3f9;
     border-radius: 100px;
     box-shadow: 0 20px 50px rgba(0,0,0,.2);
-    border: solid 1px rgba(58, 68, 79, 0.05);
+    border: solid 2px #ffffff;
 }
 
 #personal-modal h4.modal-title{
@@ -1854,4 +1854,21 @@ ul.staff-list li .personal-info .name a:hover{
     letter-spacing: normal;
     color: #3a444f;
     font-weight: 600;
+}
+
+.person-profile-picture{
+    position: relative;
+}
+
+#personal-modal .person-profile-picture .person-initials{
+    position: absolute;
+    font-family: Montserrat;
+    font-size: 70px;
+    width: 100%;
+    text-align: center;
+    height: 70px;
+    top: calc(50% - 50px);
+    left: 0;
+    color: #fff;
+    text-shadow: 1px 1px 9px rgba(0,0,0,.3);
 }
