display an address name when hovering over its point on a map #47

--- a/resources/assets/css/styles.css
+++ b/resources/assets/css/styles.css
@@ -1906,3 +1906,10 @@ ul.staff-list li .personal-info .name a:hover{
     -moz-filter:blur(4px);
     -webkit-filter:blur(4px);
 }
+
+.address-name-in-map-tooltip{
+    margin: 0;
+    font-family: Montserrat;
+    font-size: 14px;
+    font-weight: 600;
+}
