--- a/resources/assets/css/styles.css
+++ b/resources/assets/css/styles.css
@@ -1573,14 +1573,14 @@ a.link-back.arrow-left:hover{
     display: inline-block;
     color: #fff;
     background: #bbbec2;
-    font-size: 16px;
-    width: 25px;
-    height: 25px;
-    line-height: 25px;
+    font-size: 14px;
+    width: 22px;
+    height: 22px;
+    line-height: 22px;
     border-radius: 14px;
     text-align: center;
     transition: background-color 0.1s linear;
-    margin-left: 15px;
+    margin-left: 6px;
 }
 
 ul.staff-list li .personal-info .name a{
@@ -2047,6 +2047,7 @@ ul.staff-list li .personal-info .name a:hover{
 
 .slided-box-content .address-box {
     border-color: #dde3e8;
+    margin-top: 0;
 }
 
 .slided-box-content .show-less-btn{
