--- a/resources/assets/css/styles.css
+++ b/resources/assets/css/styles.css
@@ -1555,6 +1555,15 @@ a.link-back.arrow-left:hover{
     transition: opacity 0.1s linear;
 }
 
+.person-profile-picture .close-icon-a{
+    position: absolute;
+    right: 35px;
+    bottom: 41px;
+    opacity: 0.5;
+    transition: opacity 0.1s linear;
+}
+
+.person-profile-picture .close-icon-a:hover,
 .slided-box-content .close-icon-a:hover {
     opacity: 1;
 }
@@ -1610,11 +1619,6 @@ ul.staff-list li .personal-info .name a:hover{
     border-radius: 6px;
 }
 
-#personal-modal .modal-header{
-    border-top-left-radius: 6px;
-    border-top-right-radius: 6px;
-}
-
 #personal-modal .modal-body{
     border-bottom-left-radius: 6px;
     border-bottom-right-radius: 6px;
@@ -1622,6 +1626,9 @@ ul.staff-list li .personal-info .name a:hover{
 
 #personal-modal .modal-header{
     background: #f7f7f7;
+    border-top-left-radius: 6px;
+    border-top-right-radius: 6px;
+    position: relative;
 }
 
 #personal-modal .modal-dialog{
@@ -1634,7 +1641,7 @@ ul.staff-list li .personal-info .name a:hover{
     margin-top: -115px;
 }
 
-#personal-modal .person-profile-picture img {
+#personal-modal .person-profile-picture img.avatar {
     width: 200px;
     height: 200px;
     background: #e6f3f9;
@@ -1682,6 +1689,16 @@ ul.staff-list li .personal-info .name a:hover{
     margin-bottom: 4px;
     margin-bottom: 11px;
 }
+
+#personal-modal .modal-header .occupation{
+    font-family: Montserrat;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.31;
+    text-align: center;
+    color: #3a444f;
+}
+
 #personal-modal .occupation {
     font-family: Montserrat;
     font-size: 14px;
